--- a/.github/workflows/python-cov.yml
+++ b/.github/workflows/python-cov.yml
@@ -26,7 +26,7 @@ jobs:
       uses: alexanderdamiani/pytester-cov@v1.0.0
       with:
         pytest-root-dir: '.'
-        cov-omit-list: 'test/*, temp/main3.py, temp/main4.py'
+        cov-omit-list: './*, main.py, compare_nums.py'
         cov-threshold-single: ${{ env.COVERAGE_SINGLE }}
         cov-threshold-total: ${{ env.COVERAGE_TOTAL }}
 
